--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@
 
 # misc
 .DS_Store
-.env
 .env.local
 .env.development.local
 .env.test.local
@@ -20,6 +19,7 @@
 package-lock.json
 
 /.idea
+/.env
 
 npm-debug.log*
 yarn-debug.log*
