--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "module": "commonjs",
         "target": "es6",
         "jsx": "react",
+        "baseUrl": "src",
         "strict": true,
         "allowSyntheticDefaultImports": true,
         "esModuleInterop" : true,
